--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chalk": "^4.1.2",
     "cron": "^2.3.0",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "mongodb": "^4.12.0"
   }
 }
