--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "author": "DavidCzPdy",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
     "chalk": "^4.1.2",
     "cron": "^2.3.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
-    "mongodb": "^4.12.0"
+    "ffmpeg-static": "^5.1.0",
+    "mongodb": "^4.12.0",
+    "tweetnacl": "^1.0.3"
   }
 }
