--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cron": "^2.3.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "ffmpeg-static": "^5.1.0",
     "mongodb": "^4.12.0",
     "tweetnacl": "^1.0.3"
