--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
+    "axios": "^1.4.0",
     "chalk": "^4.1.2",
     "cron": "^2.3.0",
     "discord.js": "^14.11.0",
