--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "ffmpeg-static": "^5.1.0",
+    "googleapis": "^118.0.0",
     "mongodb": "^4.12.0",
     "tweetnacl": "^1.0.3"
   }
