--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "author": "DavidCzPdy",
   "dependencies": {
+    "@discord-player/extractor": "^4.4.1",
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
+    "@distube/ytdl-core": "^4.11.17",
     "axios": "^1.4.0",
     "chalk": "^4.1.2",
     "cron": "^2.3.0",
+    "discord-player": "^6.6.2",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
