--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "chalk": "^4.1.2",
+    "child_process": "^1.0.2",
     "cron": "^2.3.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
